0027318: Memory is not released in Select3D_SensitiveSet when destroying AIS_InteractiveContext without removing objects

- destructor was added to SelectMgr_SelectableObject to clean up selections;
- test case for issue #27318

Warnings elimination